--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "discord.js": "github:discordjs/discord.js",
-    "logger": "github:moonstar-x/logger",
-    "node-opus": "^0.3.2"
+    "logger": "github:moonstar-x/logger"
   },
   "devDependencies": {},
   "scripts": {
